--- a/practical/index1.html
+++ b/practical/index1.html
@@ -11,7 +11,7 @@
     <div class="flex flex-center justify-center bg-cyan-50 min-h-screen">
 
         <!--card container-->
-        <div class="bg-blue-600 p-6 m-3 space-y-10 shadow-2xl rounded-3xl md:p-40">
+        <div class="bg-white p-6 m-3 space-y-10 shadow-2xl rounded-3xl md:p-40">
 
             <!--menu container-->
             <div class="flex flex-col items-center justify-center space-y-3 md:flex-row md:space-y-0 md:space-x-8 md:mb-24 md:justify-end">
