--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <button>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
-                class="w-8 text-gray-300 duration-200 hover:scale-110"
+                class="w-8 text-black-300 duration-200 hover:scale-110"
                 viewBox="0 0 24 24"
                 stroke-width="1.5"
                 stroke="currentColor"
